--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
-PySide2-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
-shiboken2-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
-shiboken2_generator-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-37_ub18\PySide2-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-37_ub18\shiboken2-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-37_ub18\shiboken2_generator-5.15.10-5.15.10-cp37-cp37m-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-38_ub20\PySide2-5.15.10-5.15.10-cp38-cp38-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-38_ub20\shiboken2_generator-5.15.10-5.15.10-cp38-cp38-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
+python-38_ub20\shiboken2-5.15.10-5.15.10-cp38-cp38-linux_aarch64.whl filter=lfs diff=lfs merge=lfs -text
